Fixes vertical align

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -271,17 +271,21 @@
 
       li {
 
-        a { text-decoration:none; color: $cGray3; }
-
         @include inline-block();
+
         margin: 0 3px 5px 0;
         width:80px;
-
         padding-left: 7px;
+
+        vertical-align: top;
+
         background:url(icons/square.png) no-repeat left 7px;
 
         color: $cGray3;
         font-size:12px;
+
+        a { text-decoration:none; color: $cGray3; }
+
       }
     }
   } // content
